# cpp_gotchas

./: .gitignore  README.md
basics/: STL.md  strings.cpp  variadic_template.cpp  widestrings.md
concepts/: CMakeLists.txt  concepts.cpp  concepts_typetraits.cpp  readme.md
cpp20/: CMakeLists.txt  span.cpp
cpp23/: CMakeLists.txt  range_formatter.cpp
file_read/: rdbuf.cpp
file_write/: fstream.cpp  readme.md
print_full/: main.cpp  rdbuf.cpp  readme.md
stdout_writeability/: cout.cpp  main.c  main.cpp  main_cstdio_fixed.cpp  main_errno.cpp  main_fixed.c  main_fixed.cpp  readme.md  redirect_stdout.cpp
unique_ptr/: main.cpp  readme.md
